- Loadouts: Add WIP stuff, update NPC loadouts.
A lot of this stuff is still WIP and placeholders for future changes, like making the PP-2000 a Vision slot gun and removing the P90 from the vision slot.

--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
@@ -270,7 +270,7 @@ wpn_p90gamma:r:3:50
 wpn_steyr_scout_big:r:3
 wpn_steyr_scout_big:r:3
 
-wpn_sr25:r:3:50
+wpn_vintorez_n1:r:3:50
 wpn_scar_siber:r:3:50
 wpn_scar_siber:r:3
 wpn_scar_siber:r:3
