--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
@@ -115,7 +115,7 @@ wpn_fn57:r:0
 
 [killer_veteran_primary]
 wpn_fn2000_nimble:r:6:25
-wpn_sr25:r:3:5
+wpn_vintorez_n1:r:3:5
 wpn_scar_siber:r:3:10
 wpn_k98_mod:0:0
 wpn_k98_mod:0:0
@@ -278,7 +278,7 @@ wpn_fal_sa58_osw:r:3
 wpn_scar_siber:r:3:25
 wpn_scar_siber:r:3:25
 wpn_scar_siber:r:3:25
-wpn_sr25:4:3:15
+wpn_vintorez_n1:4:3:15
 
 wpn_m4_ru556:r:6:25
 wpn_m249:4:6
