--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
@@ -28,7 +28,7 @@ secondary = monolith_legend_secondary
 
 ;----------------------------------------------------
 [monolith_novice_primary]
-wpn_toz34_mark4_23:0:1
+wpn_toz34_mark4_23:0:3
 wpn_sv98:0:3
 wpn_svd_m1:3
 wpn_svd_m1:3
@@ -314,7 +314,7 @@ wpn_steyr_scout_big:r:3
 wpn_steyr_scout_big:0:3
 
 wpn_ash12:r:3
-wpn_sr25:r:3:10
+wpn_vintorez_n1:r:3:10
 wpn_remington700:0:3
 wpn_remington700:r:3
 wpn_svd_m1:3
@@ -357,8 +357,8 @@ wpn_groza:4:3
 wpn_vihr:r:3
 wpn_vihr:r:3
 
-wpn_ks23:r:1
-wpn_ks23:r:1
+wpn_ks23:r:3
+wpn_ks23:r:3
 wpn_saiga12s_m2:0:6
 wpn_saiga12s_m2:4:6
 wpn_saiga12s_m2:r:6
@@ -445,9 +445,9 @@ wpn_gsh18:0:0
 wpn_gsh18:0:0
 wpn_korth:0:0
 wpn_korth_custom:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -565,8 +565,8 @@ wpn_spas12:r:6:50
 wpn_spas12:0:6:50
 wpn_saiga12s_m2:4:6
 wpn_saiga12s_m2:r:6
-wpn_ks23:r:1
-wpn_ks23:r:1
+wpn_ks23:r:3
+wpn_ks23:r:3
 wpn_saiga12s_m2:0:6
 wpn_saiga12s_m2:4:6
 wpn_saiga12s_m2:r:6
@@ -576,7 +576,7 @@ wpn_mp153_m1:0:6
 wpn_rpk74_16:0:6:70
 wpn_rpk74_16:r:6:70
 wpn_remington700_magpul_pro:r:3
-wpn_sr25:r:3:15
+wpn_vintorez_n1:r:3:15
 wpn_pkm_siber:0:0
 wpn_pkp_siber:r:0
 
@@ -639,7 +639,7 @@ wpn_saiga12s_isg:r:6:30
 wpn_dvl10:r:3
 wpn_scar_siber:r:3:25
 wpn_scar_siber:r:3
-wpn_sr25:r:3:25
+wpn_vintorez_n1:r:3:25
 wpn_steyr_scout_big:r:3
 
 wpn_p90gamma:r:3:65
