--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
@@ -29,9 +29,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
