--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
@@ -26,7 +26,7 @@ secondary = bandit_master_secondary
 ;----------------------------------------------------
 [bandit_novice_primary]
 wpn_sks_b:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -39,7 +39,7 @@ wpn_vz61_alt:0:0
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
 
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -51,7 +51,7 @@ wpn_ppsh41:0:3
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
 
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -108,9 +108,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -157,9 +157,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -233,9 +233,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
