--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_csky.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_csky.ltx
@@ -211,7 +211,7 @@ wpn_l96a1m:r:0:75
 wpn_steyr_scout_big:0:3
 wpn_remington700_lapua700:0:0:25
 wpn_dvl10_m1:r:0
-wpn_sr25:r:3:15
+wpn_vintorez_n1:r:3:15
 wpn_fal_sa58_osw:r:0
 wpn_k98_mod:0:3
 wpn_k98_mod:0:3
