--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -83,9 +83,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -95,7 +95,7 @@ wpn_fn57:0:0
 
 [ecolog_merc_primary]
 wpn_steyr_scout_big:r:3
-wpn_sr25:r:3:5
+wpn_vintorez_n1:r:3:5
 wpn_scar_siber:r:3:10
 wpn_k98_mod:0:0
 wpn_k98_mod:0:0
@@ -267,7 +267,7 @@ wpn_protecta_aim:0:3
 
 [ecolog_stalker_primary]
 wpn_ash12:r:0
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak12_m1:r:0
 wpn_ak12_m1:r:0
@@ -332,9 +332,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -344,7 +344,7 @@ wpn_fn57:0:0
 
 [ecolog_nstalker_primary]
 wpn_ash12:r:0
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak12_m1:r:0
 wpn_abakan_n:r:0:25
@@ -395,7 +395,7 @@ wpn_steyr_scout_big:r:3
 wpn_saiga12s_isg:r:6:5
 wpn_remington700_magpul_pro:0:3
 wpn_ash12:r:3
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak74_n:r:6
 wpn_ak12_m1:r:6
