--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
@@ -64,8 +64,8 @@ wpn_sv98:r:3
 
 wpn_saiga12s_m2:r:6
 
-wpn_toz34_mark4_23:0:1
-wpn_toz34_mark4_23:0:1
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
 
 [greh_novice_secondary]
 wpn_mp412:0:0
@@ -75,9 +75,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -97,9 +97,9 @@ wpn_9a91:r:3
 wpn_9a91:r:3
 
 wpn_saiga12s_m2:r:6
-wpn_ks23:r:1
-wpn_ks23:r:1
-wpn_toz34_mark4_23:0:1
+wpn_ks23:r:3
+wpn_ks23:r:3
+wpn_toz34_mark4_23:0:3
 
 wpn_ash12:4:3
 
@@ -142,9 +142,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -165,8 +165,8 @@ wpn_vihr:r:3
 wpn_vihr:r:3
 
 wpn_saiga12s_m2:r:6
-wpn_ks23:r:1
-wpn_ks23:r:1
+wpn_ks23:r:3
+wpn_ks23:r:3
 
 wpn_ash12:4:3
 
@@ -211,9 +211,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -233,8 +233,8 @@ wpn_9a91:r:3
 wpn_vihr:r:3
 
 wpn_saiga12s_m2:r:6
-wpn_ks23:r:1
-wpn_ks23:r:1
+wpn_ks23:r:3
+wpn_ks23:r:3
 
 wpn_ash12:4:3
 wpn_ash12:4:3
@@ -304,8 +304,8 @@ wpn_pkm_siber:0:0
 
 wpn_pkp_siber:r:0
 
-wpn_ks23:r:1
-wpn_ks23:r:1
+wpn_ks23:r:3
+wpn_ks23:r:3
 
 wpn_abakan_n:r:6
 wpn_abakan_n:r:6
@@ -347,9 +347,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -412,9 +412,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -475,9 +475,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
