--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_isg.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_isg.ltx
@@ -249,9 +249,9 @@ wpn_ak5c_isg:r:6
 wpn_m249:0:6
 wpn_m249:r:6
 
-wpn_sr25:r:3
-wpn_sr25:r:3
-wpn_sr25:r:3
+wpn_vintorez_n1:r:3
+wpn_vintorez_n1:r:3
+wpn_vintorez_n1:r:3
 
 wpn_saiga12s_isg:r:6
 wpn_saiga12s_isg:r:6
