--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_renegade.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_renegade.ltx
@@ -32,9 +32,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -226,9 +226,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -243,7 +243,7 @@ wpn_ithacam37_trench:0:6
 wpn_k98_mod:0:0
 wpn_saiga12s_isg:r:6:5
 wpn_ash12:r:0
-wpn_ks23:r:1
+wpn_ks23:r:3
 wpn_p90gamma:r:3
 wpn_p90gamma:r:3
 wpn_p90gamma:r:3:10
