--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
@@ -42,9 +42,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -146,9 +146,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -206,9 +206,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -218,7 +218,7 @@ wpn_fn57:0:0
 
 [veteran_primary]
 wpn_ash12:r:0
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak12_m1:r:0
 wpn_abakan_n:r:0:25
@@ -277,9 +277,9 @@ wpn_oc33:0:0
 wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom0:0
+wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom0:0
+wpn_pm_custom:0
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
@@ -289,7 +289,7 @@ wpn_fn57:0:0
 
 [stalker_expert_primary]
 wpn_ash12:r:0
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak12_m1:r:0
 wpn_abakan_n:r:0:25
@@ -365,7 +365,7 @@ wpn_ump45:r:3
 wpn_mp5_nimble:r:0
 wpn_remington700_magpul_pro:0:3
 wpn_ash12:r:3
-wpn_ks23:r:1
+wpn_ks23:r:3
 
 wpn_ak74_n:r:6
 wpn_ak12_m1:r:6
