--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -25,20 +25,12 @@ total_points_eco_3 = 1500
 
 [shared]:custom
 cash 					        = false,1,0
-device_pda_1 			        = false,1,0
 bandage					        = false,3,0
 batteries_dead			        = false,2,0
 flask 					        = false,1,0
-vodka 					        = false,1,0
 tushonka                        = false,1,0
 box_matches 			        = false,3,0
-swiss_knife						= false,1,0
-grooming						= false,1,0
-itm_actor_backpack			    = false,1,0
-itm_backpack			        = false,1,0
-detector_simple			        = false,1,0
-detector_radio					= false,1,0
-wpn_knife2					    = false,1,0
+bolt 					        = false,1,0
 
 bolts_pack						= true,1,10
 itm_sleepbag                    = true,1,50
@@ -49,339 +41,300 @@ energy_drink			        = true,1,20
 kolbasa					        = true,1,15
 mineral_water					= true,2,35
 
-lead_box				        = true,1,100
-device_flashlight				= true,1,150
+device_flashlight				= true,1,200
 device_torch_dummy              = true,1,300
 device_glowstick				= true,4,20
 
-armor_repair_fa                 =true,1,35
-gun_oil                         =true,1,50
-
-cooking					        = true,1,25
-yadylin							= true,2,25
-drug_sleepingpills		        = true,2,25
-drug_radioprotector             = true,2,25
-antirad_cystamine               = true,3,20
-caffeine                        = true,2,25
-antirad					        = true,2,25
-antirad_kalium                  = true,2,25
-drug_psy_blockade               = true,2,50
-glucose_s						= true,2,15
-medkit 					        = true,4,75
-jgut							= true,2,50
-drug_anabiotic			        = true,1,100
-akvatab                         = true,2,100
-drug_antidot					= true,2,100
-tetanus							= true,2,60
-salicidic_acid					= true,2,10
+armor_repair_fa                 = true,1,35
+gun_oil                         = true,1,50
 
 wpn_binoc_inv                   = true,1,150
-
-wpn_ppsh41_woodnew							= true,1,400
-wpn_toz34                                   = true,1,650,1
-wpn_tt33									= true,1,250
+radio_item                      = true,1,5
 
 [stalker_loadout]:shared
 stalker_patch			        = false,1,0
-bolt 					        = false,1,0
 cigarettes_russian                = false,2,0
 
 helm_resp                       = true,1,50
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_vityaz									= true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps									    = true,1,200
-wpn_oc33									= true,1,250
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_vityaz = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_oc33 = true,1,250
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
-novice_outfit		                = true,1,50
-stalker_outfit                      = true,1,500
+novice_outfit = true,1,50
+stalker_outfit = true,1,500
 
-joint                             = true,1,90
+joint = true,1,90
 
-ammo_9x18_ap                      = true,3,100
+ammo_9x18_ap = true,3,100
 
 [bandit_loadout]:shared
 bandit_patch			        = false,1,0
-bolt_bullet 			        = false,1,0
 cigarettes_russian		        = false,2,0
 
-helm_cloth_mask                       = true,1,50
+helm_cloth_mask     = true,1,50
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_vityaz									= true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps     								= true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_vityaz = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
-bandit_novice_outfit                   = true,1,50
-banditmerc_outfit                      = true,1,500
+bandit_novice_outfit = true,1,50
+banditmerc_outfit = true,1,500
 
-ammo_9x18_pmm                      = true,3,50
+ammo_9x18_pmm = true,3,50
 
 [ecolog_loadout]:shared
-ecolog_patch			        = false,1,0
-bolt 					        = false,1,0
-cigarettes_russian		        = false,2,0
-
+ecolog_patch = false,1,0
+cigarettes_russian = false,2,0
 helm_resp                       = true,1,50
 
-wpn_k98                         = true,1,1050
-wpn_mp5							= true,1,500
-wpn_vz61_alt					= true,1,375
-wpn_bm16                        = true,1,550,2
-wpn_toz106                      = true,1,375
-wpn_sig220_n					= true,1,275
-wpn_usp_match					= true,1,300
-wpn_fort						= true,1,175
+wpn_k98 = true,1,1050
+wpn_mp5 = true,1,500
+wpn_vz61_alt = true,1,375
+wpn_bm16 = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_sig220_n = true,1,275
+wpn_usp = true,1,300
 
-ammo_11.43x23_hydro                      = true,3,100
+ammo_11.43x23_hydro = true,3,100
 
-novice_outfit		            = true,1,50
-ecolog_guard_outfit             = true,1,600
-
+novice_outfit = true,1,50
+ecolog_guard_outfit = true,1,600
 stimpack_scientic               = true,1,100
-
 
 [dolg_loadout]:shared
 dolg_patch				        = false,1,0
-bolt_bullet 			        = false,1,0
 cigarettes_russian		        = false,2,0
 
-helm_respirator_old                       = true,1,50
+helm_respirator_old = true,1,50
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_pp2000 = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps	= true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_pp2000		                            = true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps								    	= true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+ammo_9x18_ap = true,3,85
 
-ammo_9x18_ap                      = true,3,85
-
-dolg_novice_outfit	            = true,1,50
-nbc_dolg_outfit                 = true,1,650
-
-
+dolg_novice_outfit = true,1,50
+nbc_dolg_outfit = true,1,650
 
 [freedom_loadout]:shared
-freedom_patch			        = false,1,0
-bolt_bullet 			        = false,1,0
-cigarettes				        = false,2,0
+freedom_patch = false,1,0
+cigarettes = false,2,0
 
-helm_respirator_old             = true,1,50
+helm_respirator_old = true,1,50
 
-wpn_k98                         = true,1,1050
-wpn_mp5							= true,1,500
-wpn_vz61_alt					= true,1,375
-wpn_bm16                        = true,1,550,2
-wpn_toz106                      = true,1,375
-wpn_usp_custom					= true,1,250
-wpn_fort						= true,1,175
-wpn_beretta_camo                = true,1,200
-wpn_glock_modern                = true,1,300
+wpn_k98 = true,1,1050
+wpn_mp5 = true,1,500
+wpn_vz61_alt = true,1,375
+wpn_bm16 = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_usp = true,1,250
 
-ammo_9x19_ap                      = true,3,110
+wpn_beretta_modern = true,1,200
+wpn_glock_modern = true,1,300
 
-svoboda_novice_outfit                       = true,1,50
-nbc_freedom_outfit	                        = true,1,650
+ammo_9x19_ap = true,3,110
 
-marijuana				= true,2,50
-cocaine                                 = true,1,75
-stimpack_army                        = true,2,25
+svoboda_novice_outfit = true,1,50
+nbc_freedom_outfit = true,1,650
+
+marijuana = true,2,50
+cocaine = true,1,75
+stimpack_army = true,2,25
 
 [killer_loadout]:shared
-killer_patch				    = false,1,0
-bolt 					        = false,1,0
-cigarettes				        = false,2,0
+killer_patch = false,1,0
+cigarettes = false,2,0
 
-helm_respirator_old             = true,1,50
+helm_respirator_old = true,1,50
 
-wpn_k98                         = true,1,1050
-wpn_mp5							= true,1,500
-wpn_vz61_alt					= true,1,375
-wpn_bm16                        = true,1,550,2
-wpn_toz106                      = true,1,375
-wpn_usp_custom					= true,1,250
-wpn_fort						= true,1,175
-wpn_beretta_camo                = true,1,200
-wpn_fn57                        = true,1,325
+wpn_k98 = true,1,1050
+wpn_mp5 = true,1,500
+wpn_vz61_alt = true,1,375
+wpn_bm16 = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_usp = true,1,250
 
-ammo_9x19_ap                      = true,3,110
+wpn_beretta_modern = true,1,200
+wpn_fn57 = true,1,325
 
-merc_fighter_outfit                     = true,1,50
-merc_wolven_outfit		                = true,1,600
+ammo_9x19_ap = true,3,110
 
-survival_kit                                = true,1,50
+merc_fighter_outfit = true,1,50
+merc_wolven_outfit = true,1,600
+
+survival_kit = true,1,50
 
 [army_loadout]:shared
-army_patch				        = false,1,0
-bolt_bullet 			        = false,1,0
-cigarettes_russian		        = false,2,0
+army_patch = false,1,0
+cigarettes_russian = false,2,0
 
-helm_respirator_old             = true,1,50
+helm_respirator_old = true,1,50 
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_vityaz									= true,1,500
-wpn_bizon                                   = true,1,400
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps								    	= true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_vityaz = true,1,500
+wpn_bizon = true,1,400
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
 
-ammo_9x18_pmm                      = true,3,50
+ammo_9x18_pmm = true,3,50
 
-army_outfit		                        = true,1,50
+army_outfit = true,1,50
 
-ration_ukr                              = true,1,100
+ration_ukr = true,1,100
 
 
 [monolith_loadout]:shared
-monolith_patch			        = false,1,0
-bolt 					        = false,1,0
-cigar3							= false,2,0
+monolith_patch = false,1,0
+cigar3 = false,2,0
 
-helm_ranger                      = true,1,50
-
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_vintorez_n1                             = true,1,1000
-wpn_pp2000		                            = true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps									    = true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
-wpn_beretta_camo                = true,1,200
+helm_ranger = true,1,50 
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_vintorez_n1 = true,1,1000
+wpn_pp2000 = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
+wpn_beretta_modern = true,1,200
 
 ammo_9x39_pab9                  = true,3,120
 
-monolith_outfit	                = true,1,50
-monolith_trenchcoat_outfit      = true,1,400
+monolith_outfit = true,1,50
+monolith_trenchcoat_outfit = true,1,400
 
-wpn_ak12_custom                               = true,1,700,1
+wpn_ak12_custom = true,1,700,1
 
 [csky_loadout]:shared
-csky_patch				        = false,1,0
-bolt 					        = false,1,0
-cigarettes				        = false,2,0
+csky_patch = false,1,0
+cigarettes = false,2,0
 
-helm_resp                       = true,1,50
+helm_resp = true,1,50 
 
-wpn_k98                         = true,1,1050
-wpn_winchester1873              = true,1,600
-wpn_mp5							= true,1,500
-wpn_vz61_alt					= true,1,375
-wpn_bm16                        = true,1,550,2
-wpn_toz106                      = true,1,375
-wpn_usp_custom					= true,1,250
-wpn_fort						= true,1,175
-wpn_beretta_camo                = true,1,200
-wpn_fn57                        = true,1,325
+wpn_k98 = true,1,1050
+wpn_winchester1873 = true,1,600
+wpn_mp5 = true,1,500
+wpn_vz61_alt = true,1,375
+wpn_bm16 = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_usp = true,1,250
 
-ammo_9x19_pbp                      = true,3,60
-ammo_357_hp_mag                    = true,3,60
+wpn_beretta_modern = true,1,200
+wpn_fn57 = true,1,325
 
-cs_novice_outfit	            = true,1,50
-cs_light_outfit                 = true,1,500
+ammo_9x19_pbp = true,3,60
+ammo_357_hp_mag = true,3,60
 
-tea                                     = true,1,40
-drink_crow                              = true,1,60
+cs_novice_outfit = true,1,50
+cs_light_outfit = true,1,500
+
+tea = true,1,40
+drink_crow = true,1,60
 
 [renegade_loadout]:shared
-renegade_patch			        = false,1,0
-bolt_bullet 			        = false,1,0
-cigarettes_russian		        = false,2,0
+renegade_patch = false,1,0
+cigarettes_russian = false,2,0
 
-helm_resp                       = true,1,50
+helm_resp = true,1,50 
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_vityaz									= true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps									    = true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_vityaz = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
-ammo_9x18_ap                      = true,3,85
+ammo_9x18_ap = true,3,85
 
-redline_novice_outfit               = true,1,50
-banditmerc_outfit	            = true,1,500
+redline_novice_outfit = true,1,50
+banditmerc_outfit = true,1,500
 
 [greh_loadout]:shared
-af_fire_loop                    = false,1,0
-greh_patch			            = false,1,0
-bolt 			                = false,1,0
-cigar3							= false,2,0
+af_fire_loop = false,1,0
+greh_patch = false,1,0
+cigar3 = false,2,0
 
-helm_ranger                      = true,1,50
+helm_ranger = true,1,50 
 
-wpn_sks_b                                  	= true,1,1000,1
-wpn_mosin									= true,1,1050
-wpn_toz34_mark4_23                          = true,1,900
-wpn_vityaz									= true,1,500
-wpn_kiparis		                            = true,1,300
-wpn_toz34_obrez_custom						= true,1,550,2
-wpn_toz106                                  = true,1,375
-wpn_aps								    	= true,1,200
-wpn_colt1911_duty							= true,1,200
-wpn_pm 										= true,1,125
+wpn_sks_b = true,1,1000,1
+wpn_mosin = true,1,1050
+wpn_toz34_mark4_23 = true,1,900
+wpn_vityaz = true,1,500
+wpn_kiparis = true,1,300
+wpn_toz34_obrez = true,1,550,2
+wpn_toz106_m1 = true,1,375
+wpn_aps = true,1,200
+wpn_colt1911 = true,1,200
+wpn_pm_custom = true,1,125
 
-ammo_23x75_barrikada						= true,3,150
+ammo_23x75_barrikada = true,3,150
 
-greh_trenchcoat_outfit	        = true,1,50
+greh_trenchcoat_outfit = true,1,50
 
 [isg_loadout]:shared
-isg_patch			            = false,1,0
-bolt_bullet 			        = false,1,0
-cigarettes				        = false,2,0
-device_pda_3					= true,1,300
+isg_patch = false,1,0
+cigarettes = false,2,0
+device_pda_3 = true,1,300 
 
-helm_respirator_gp5             = true,1,50
-helm_ach7ex           			= true,1,200
+helm_respirator_gp5 = true,1,50
 
-wpn_mossberg590					= true,1,1050
-wpn_aug_freedom					= true,1,400
-wpn_sil_9mm						= true,1,50
-wpn_mp5sd						= true,1,650
-wpn_pl15_tan					= true,1,225
-wpn_sil_pl15					= true,1,25
-wpn_vz61_alt					= true,1,325
-wpn_fnp45						= true,1,225
-wpn_fn57                        = true,1,325
-wpn_sil_gemtech					= true,1,25
-ammo_9x19_fmj					= true,2,25
-ammo_9x18_fmj					= true,2,25
-ammo_11.43x23_fmj				= true,2,25
-ammo_12x76_zhekan				= true,2,75
-af_spaika						= true,1,75
-af_repei						= true,1,75
+helm_ach7ex = true,1,200 
+wpn_mossberg590 = true,1,1050
+wpn_aug_freedom = true,1,400
+wpn_mp5sd = true,1,650
+wpn_pl15 = true,1,225
+wpn_vz61_alt = true,1,325
+wpn_fnp45 = true,1,225
+wpn_fn57 = true,1,325
 
-isg_lcs_outfit                      = true,1,50
-ghillie_outfit						= true,1,550
+ammo_9x19_fmj = true,2,25
+ammo_9x18_fmj = true,2,25
+ammo_11.43x23_fmj = true,2,25
+ammo_12x76_zhekan = true,2,75
 
-medkit_army                        = true,2,75
-morphine                     	   = true,3,25
-mre                                = true,1,25
+af_spaika = true,1,75
+af_repei = true,1,75 
+
+;wpn_sil_9mm = true,1,50
+;wpn_sil_pl15 = true,1,25
+;wpn_sil_gemtech = true,1,25
+
+isg_lcs_outfit = true,1,50
+ghillie_outfit = true,1,550 
+
+medkit_army = true,2,75
+morphine = true,3,25
+mre = true,1,25
 
 [zombied_loadout]:shared,stalker_loadout
 
@@ -391,8 +344,8 @@ mre                                = true,1,25
 ;-- when a weapon in this section found in your inventory, you will be given the ammo stated for it
 ;-- otherwise, ammo type will be the first one define in weapon's config
 [ammo_type_per_wpn]
-wpn_tt33 = ammo_7.62x25_ps
-wpn_ppsh41_woodnew = ammo_7.62x25_ps
+wpn_tt33_modern = ammo_7.62x25_ps
+wpn_ppsh41 = ammo_7.62x25_ps
 wpn_mosin = ammo_7.62x54_7h1
 wpn_toz34_mark4_23 = ammo_23x75_shrapnel
 wpn_vintorez_n1 = ammo_9x39_pab9
