--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
@@ -63,8 +63,8 @@ wpn_mp5:0:6
 wpn_mp5:0:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 wpn_ump45:r:3
 
 wpn_pp2000:r:6
@@ -73,8 +73,8 @@ wpn_mp5:0:6
 wpn_mp5:0:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 
 wpn_remington870:0:3
 wpn_mp133:0:3
@@ -166,8 +166,8 @@ wpn_mp5:0:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 
 wpn_p90gamma:r:3
 wpn_mp7:r:3:50
@@ -205,8 +205,8 @@ wpn_mp5:0:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 
 wpn_p90gamma:r:3
 wpn_mp7:r:3:50
