--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_monolith.ltx
@@ -114,8 +114,8 @@ wpn_mp5:r:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:r:6
 wpn_mp5sd_custom:r:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 wpn_vityaz:r:6
 wpn_vityaz:r:6
 wpn_vityaz:0:6
@@ -262,8 +262,8 @@ wpn_mp5:r:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:r:6
 wpn_mp5sd_custom:r:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 wpn_vityaz:r:6
 wpn_vityaz:r:6
 wpn_vityaz:0:6
@@ -336,8 +336,8 @@ wpn_pp2000:4:0
 wpn_mp5_custom:4:6
 wpn_mp5_custom:4:6
 wpn_mp5_custom:r:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 wpn_vityaz:r:6
 wpn_vityaz:r:6
 wpn_vityaz:0:6
