--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
@@ -35,7 +35,7 @@ wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
 wpn_kiparis:0:0
-wpn_vz61_alt:0:0
+wpn_vz61:0:0
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
 
@@ -46,7 +46,7 @@ wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
 wpn_kiparis:0:0
-wpn_vz61_alt:0:0
+wpn_vz61:0:0
 wpn_ppsh41:0:3
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
@@ -58,7 +58,7 @@ wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
 wpn_kiparis:0:0
-wpn_vz61_alt:0:0
+wpn_vz61:0:0
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
 
@@ -83,7 +83,7 @@ wpn_toz34_obrez:0:3
 wpn_toz34_obrez:0:3
 
 wpn_kiparis:0:0
-wpn_vz61_alt:0:0
+wpn_vz61:0:0
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
 wpn_bizon:0:0
@@ -126,7 +126,7 @@ wpn_mosin:0:6
 wpn_k98:0:3
 
 wpn_kiparis:0:0
-wpn_vz61_alt:0:0
+wpn_vz61:0:0
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
