--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -144,8 +144,8 @@ wpn_mp5:0:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
 wpn_mp5sd_custom:4:6
-wpn_vz61_alt:r:6
-wpn_vz61_alt:r:6
+wpn_vz61:r:6
+wpn_vz61:r:6
 
 wpn_p90gamma:r:3
 wpn_p90gamma:r:3:50
