--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -1,464 +1,307 @@
-
+; Done 8/28/24 - [Ted]
 [ecolog]:stalker
 
 [ecolog_novice]:stalker_novice
-primary = ecolog_stalker_primary
-secondary = ecolog_stalker_secondary
+primary = ecolog_novice_primary
+secondary = ecolog_novice_secondary
+
+[ecolog_trainee]:stalker_trainee
+primary = ecolog_trainee_primary
+secondary = ecolog_trainee_secondary
 
 [ecolog_experienced]:stalker_experienced
 primary = ecolog_experienced_primary
 secondary = ecolog_experienced_secondary
 
+[ecolog_professional]:stalker_professional
+primary = ecolog_professional_primary
+secondary = ecolog_professional_secondary
+
 [ecolog_veteran]:stalker_veteran
-primary = ecolog_merc_primary
-secondary = ecolog_merc_secondary
+primary = ecolog_veteran_primary
+secondary = ecolog_veteran_secondary
+
+[ecolog_expert]:stalker_expert
+primary = ecolog_expert_primary
+secondary = ecolog_expert_secondary
 
 [ecolog_master]:stalker_master
 primary = ecolog_master_primary
-secondary = ecolog_stalker_secondary
+secondary = ecolog_master_secondary
 
-[ecolog_trainee]:ecolog_novice
-
-[ecolog_professional]:ecolog_experienced
-primary = ecolog_nstalker_primary
-
-[ecolog_expert]:ecolog_veteran
-primary = ecolog_stalk_seva_primary
-
-[ecolog_legend]:ecolog_master
+[ecolog_legend]:stalker_legend
+primary = ecolog_legend_primary
+secondary = ecolog_legend_secondary
 
 ;----------------------------------------------------
-[ecolog_experienced_primary]
-wpn_ash12:r:0:25
-
+[ecolog_novice_primary]
 wpn_vityaz:0:6
-wpn_vityaz:0:0
-wpn_vityaz:0:0
-wpn_bizon:0:6
-wpn_bizon:0:0
-wpn_bizon:0:0
+wpn_vityaz:0:6
 wpn_kiparis:0:6
-wpn_kiparis:0:0
-wpn_kiparis:0:0
+wpn_kiparis:0:6
 
-wpn_akm_bas:0:3
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_ak74m_n:0:6
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
 wpn_ak74u_n1:0:6
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:r:6
-wpn_ak74u_tac:0:0
-wpn_ak105:r:6
-wpn_ak105:0:0
-wpn_ak105:0:0
+wpn_sks_b:0:0
 
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:r:3
 wpn_protecta:0:3
-wpn_protecta_aim:0:3
+wpn_bm16:0:0
+wpn_toz106_m1:0:0
+wpn_toz106_m1:0:0
+wpn_toz34_obrez:0:0
 
-wpn_adar2_15:0:3
-
-[ecolog_experienced_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
+[ecolog_novice_secondary]
+wpn_sig220_n:0:0
 wpn_tt33_modern:0:0
+wpn_pm_custom:0:0
+
+[ecolog_trainee_primary]
+wpn_vityaz:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+wpn_kiparis:0:6
+
+wpn_ak74u_n1:0:6
+wpn_adar2_15:0:3
+wpn_sks_b:0:0
+
+wpn_mp133:0:3
+wpn_bm16:0:0
+wpn_bm16:0:0
+wpn_toz106_m1:0:0
+wpn_toz106_m1:0:0
+wpn_toz106_m1:0:0
+wpn_toz34_obrez:0:0
+wpn_toz34_obrez:0:0
+
+[ecolog_trainee_secondary]
+wpn_sig220_n:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
 
-[ecolog_merc_primary]
-wpn_steyr_scout_big:r:3
-wpn_vintorez_n1:r:3:5
-wpn_scar_siber:r:3:10
-wpn_k98_mod:0:0
-wpn_k98_mod:0:0
-wpn_l96a1m:r:0:25
-wpn_remington700:0:0
-wpn_remington700:0:0
-wpn_remington700:0:0
-wpn_dvl10:4:0
-wpn_dvl10_m1:4:0
-wpn_fal_sa58_osw:r:0
-wpn_fal_sa58_osw:r:0
-wpn_ump45:r:0
+[ecolog_experienced_primary]
+wpn_vityaz:0:6
+wpn_vityaz:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+wpn_kiparis:0:6
+wpn_kiparis:0:6
+wpn_bizon:0:0
+wpn_bizon:0:0
+wpn_mp5:0:6
 
-wpn_m4a1_siber:r:6
-wpn_m4_ru556:r:6:25
-wpn_m249:0:6
-wpn_sig550:r:6
+wpn_ak74u_n1:0:6
+wpn_sks_b:0:0
+wpn_ak74_n:0:0
+wpn_adar2_15:0:3
 
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
+wpn_mp133:0:3
+wpn_bm16:0:0
+wpn_toz106_m1:0:0
+wpn_toz34_obrez:0:0
 
-wpn_sig550:r:0
+[ecolog_experienced_secondary]
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_pb_custom:0:0
+wpn_aps:0:0 
 
-wpn_ak105:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0
-wpn_g36ka4_rwap:r:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-
-wpn_pp2000:r:6
+[ecolog_professional_primary]
+wpn_vityaz:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+wpn_bizon:0:0
+wpn_bizon:0:0
 wpn_mp5:0:6
 wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_vz61:r:6
-wpn_vz61:r:6
 
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3:50
-wpn_mp7:r:3:50
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_sks_b:0:0
+wpn_ak74_n:0:0
+wpn_adar2_15:0:3
+wpn_adar2_15:0:3
 
 wpn_remington870:0:3
 wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+
+[ecolog_professional_secondary]
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp443:0:0
+wpn_aps:0:0
+wpn_fn57:r:0
+
+[ecolog_veteran_primary]
+wpn_vityaz:0:6
+wpn_bizon:0:0
+wpn_bizon:0:0
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:0:6
+wpn_sks_b:0:0
+wpn_ak74_n:0:0
+wpn_ak74_n:0:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_adar2_15:0:3
+wpn_adar2_15:0:3
+wpn_m4_ru556:r:6:25
+wpn_m4_ru556:r:6:25
+wpn_m4_ru556:r:6:25
+wpn_akm_bas:0:3
+
+wpn_remington870:0:3
+wpn_mp133:0:3
+wpn_mp133:0:3
+
+[ecolog_veteran_secondary]
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+
+[ecolog_expert_primary]
+wpn_vityaz:0:6
+wpn_bizon:0:0
+wpn_bizon:0:0
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:0:6
+wpn_sks_b:0:0
+wpn_ak74_n:0:0
+wpn_ak74_n:0:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_adar2_15:0:3
+wpn_adar2_15:0:3
+wpn_m4a1_siber:r:6
+wpn_m4a1_siber:r:6
+wpn_m4_ru556:r:6:25
+wpn_m4_ru556:r:6:25
+wpn_akm_bas:0:3
+wpn_akm_bas:0:3
+wpn_vintorez_n1:0:0
+wpn_remington700_magpul_pro:0:0
+
+wpn_remington870:0:3
+wpn_saiga12s_m2:0:3
+wpn_mp133:0:3
 wpn_spas12:0:3:50
 wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
 
-wpn_adar2_15:0:3
-
-[ecolog_merc_secondary]
-wpn_mp412:0:0
-wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_mp443:r:0
-wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
+[ecolog_expert_secondary]
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 
 [ecolog_master_primary]
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:r:3
-wpn_saiga12s_isg:r:6:25
-wpn_m249:r:6
-wpn_dvl10:4:3
-wpn_ak103:4:6:25
-wpn_akm_alfa:4:6:25
-wpn_akm_alfa:4:6:25
-wpn_ak12_m1:4:6:25
-wpn_ak74_n:4:6:25
-wpn_svds:r:3
-wpn_svds_pmc:r:3:10
-
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3:50
-
-wpn_ump45:r:0
-wpn_ump45:r:0
-
-wpn_sks_tac:r:0
-wpn_ak74m_n:r:6
-wpn_abakan_n:r:0
-wpn_ak12_m1:r:0
-wpn_rpk74_16:0:3
-wpn_rpk:0:0
-wpn_ak103:r:0
-wpn_ash12:r:3
-wpn_ash12:r:0
-wpn_pp2000:r:0
-wpn_pp2000:r:0
-wpn_sv98:0:0
-wpn_svd_m1:r:0
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:0
-wpn_akm_bas:r:0
-wpn_ak74m_n:r:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:r:0
-wpn_ak74_n:r:6
-wpn_ak74_n:r:0
-wpn_ak74_n:r:0
-wpn_ak74u_n1:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74u_n1:r:0
-wpn_ak74u_tac:r:6
-wpn_ak74u_tac:r:6
-wpn_abakan_n:r:6
-
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:3
-wpn_vintorez_n1:0:0
-wpn_val:r:0
-wpn_val:r:3
-wpn_val:r:0
-wpn_9a91:0:3
-wpn_9a91:0:3
-
-wpn_ks23:0:1
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_isg:0:3
-wpn_saiga12s_isg:0:3
-wpn_saiga12s_isg:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-
-[ecolog_stalker_primary]
-wpn_ash12:r:0
-wpn_ks23:r:3
-
-wpn_ak12_m1:r:0
-wpn_ak12_m1:r:0
-wpn_abakan_n:r:0:25
-wpn_ak105:r:0
-wpn_abakan_n:r:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
-
-wpn_bizon:r:0
 wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
+wpn_bizon:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
 
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
+wpn_ak74u_tac:0:6
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_ak105:0:0
+wpn_m4a1_siber:r:6
+wpn_m4a1_siber:r:6
+wpn_m4a1_siber:r:6
+wpn_m4_ru556:r:6:25
+wpn_m4_ru556:r:6:25
+wpn_akm_bas:0:3
+wpn_vintorez_n1:0:0
+wpn_groza:0:0
+wpn_9a91:0:0
+wpn_p90gamma:r:3
+wpn_remington700_magpul_pro:0:0
+
 wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
+wpn_saiga12s_m2:0:3
+wpn_spas12:0:3:50
+wpn_mp153_m1:0:3
+wpn_mp153_m1:0:3
 
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_rpk:r:0
-wpn_rpk:0:0
-wpn_ak103:r:0
-wpn_ak103:0:0
-wpn_sks_tac:r:0
-wpn_rpk:r:0
-
-wpn_ump45:r:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svds:r:0
-wpn_svds:0:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-
-wpn_vintorez_n1:r:0
-wpn_vintorez_n1:r:0
-wpn_9a91:r:0
-
-[ecolog_stalker_secondary]
+[ecolog_master_secondary]
+wpn_sig220_n:0:0
+wpn_sig220_n:0:0
 wpn_mp412:0:0
 wpn_mp443:0:0
-wpn_aps:0:0
+wpn_mp443:0:0
 wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_colt1911_camo:r:0
+wpn_glock_modern:r:0:25
 
-[ecolog_nstalker_primary]
-wpn_ash12:r:0
-wpn_ks23:r:3
-
-wpn_ak12_m1:r:0
-wpn_abakan_n:r:0:25
-wpn_ak105:r:0
-wpn_abakan_n:r:0
-wpn_ak74u_tac:r:0
-wpn_ak74u_n1:r:0
-wpn_ak74u_n1:0:0
-wpn_ak74m_n:r:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:r:0
-wpn_ak74_n:0:0
-
-wpn_bizon:r:0
+[ecolog_legend_primary]
 wpn_bizon:0:0
-wpn_vityaz:r:0
-wpn_vityaz:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
 
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_saiga12s_m2:0:3
-wpn_wincheaster1300:0:3
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_ak105:0:0
+wpn_ak105:0:0
+wpn_aug_modern:0:0
+wpn_aug_merc:0:0
+wpn_m4a1_siber:r:6
+wpn_m4a1_siber:r:6
+wpn_akm_bas:0:3
+wpn_vintorez_n1:0:0
+wpn_groza:0:0
+wpn_9a91:0:0
+wpn_p90gamma:r:3
+wpn_remington700_magpul_pro:0:0
+
 wpn_remington870:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
+wpn_mp133:0:3
+wpn_saiga12s_isg:0:3:50
+wpn_mp153_m1:0:3
 
-wpn_sks_molot:r:0
-wpn_sks_b:r:0
-wpn_sks_b:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_akm_bas:r:0
-wpn_akm_bas:0:0
-wpn_rpk:r:0
-wpn_rpk:0:0
-
-wpn_mosin:r:0
-wpn_mosin:0:0
-wpn_svds:r:0
-wpn_svds:0:0
-wpn_sv98:r:0
-wpn_sv98:0:0
-
-[ecolog_stalk_seva_primary]
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:r:3
-wpn_saiga12s_isg:r:6:5
-wpn_remington700_magpul_pro:0:3
-wpn_ash12:r:3
-wpn_ks23:r:3
-
-wpn_ak74_n:r:6
-wpn_ak12_m1:r:6
-wpn_ak74m_n:r:6
-wpn_ak12_m1:r:6
-wpn_ak12_m1:r:6
-wpn_abakan_n:r:6:25
-wpn_ak105:r:6
-wpn_abakan_n:r:6
-wpn_ak74u_tac:r:6
-wpn_ak74u_n1:r:6
-wpn_ak74u_n1:0:6
-wpn_ak74m_n:r:6
-wpn_ak74m_n:0:6
-wpn_ak74_n:r:6
-wpn_ak74_n:0:6
-
-wpn_bizon:r:6
-wpn_bizon:0:6
-wpn_vityaz:r:6
-wpn_vityaz:0:6
-wpn_pp2000:r:0
-wpn_pp2000:r:0
-
-wpn_mp153_m1:0:6
-wpn_mp153_m1:0:6
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_m2:0:6
-wpn_saiga12s_isg:0:6
-wpn_spas12:0:6:50
-wpn_protecta:0:6
-wpn_protecta_aim:0:6
-
-wpn_sks_molot:r:3
-wpn_sks_b:r:3
-wpn_sks_b:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_akm_bas:r:3
-wpn_akm_bas:0:3
-wpn_rpk:r:3
-wpn_rpk:0:3
-wpn_ak103:r:3
-wpn_ak103:0:3
-wpn_sks_tac:r:3
-wpn_rpk:r:3
-wpn_akm_alfa:r:3
-wpn_ak103:r:3
-
-wpn_svds:r:3
-wpn_svds:0:3
-wpn_sv98:r:3
-wpn_sv98:0:3
-wpn_svds:r:3
-wpn_svd_m1:r:3
-wpn_svds_pmc:r:3
-
-
-wpn_val:r:3
-wpn_val:r:3
-wpn_vintorez_n1:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-
-wpn_p90gamma:r:3
-wpn_p90gamma:r:3
+[ecolog_legend_secondary]
+wpn_sig220_n:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_oc33:0:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+wpn_colt1911_camo:r:0
+wpn_colt1911_camo:r:0
+wpn_glock_modern:r:0:25
+wpn_glock_modern:r:0:25 
