- New Game Loadouts: Update
Likely last commit before a public beta test as this makes it "playable".

No shared meds but whatever.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -191,6 +191,7 @@ wpn_knife2 = false,1,0
 wpn_device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
+helm_cloth_mask = true,1,5
 helm_resp = true,1,50
 helm_respirator_old = true,1,150
 
@@ -215,6 +216,8 @@ wpn_knife1 = false,1,0
 wpn_device_pda_1 = false,1,0
 itm_backpack = false,1,0
 
+helm_cloth_mask = true,1,5
+helm_resp = true,1,50       
 helm_respirator_old = true,1,50
 
 wpn_k98 = true,1,1050
@@ -238,7 +241,9 @@ stimpack_army = true,2,25
 
 [killer_loadout]:shared
 killer_patch = false,1,0
-cigarettes = false,2,0
+wpn_knife3 = false,1,0
+device_pda_2 = false,1,0
+itm_backpack = false,1,0
 
 helm_respirator_old = true,1,50
 
@@ -261,7 +266,9 @@ survival_kit = true,1,50
 
 [army_loadout]:shared
 army_patch = false,1,0
-cigarettes_russian = false,2,0
+wpn_knife2 = false,1,0
+device_pda_1 = false,1,0
+itm_backpack = false,1,0
 
 helm_respirator_old = true,1,50 
 
@@ -285,9 +292,12 @@ ration_ukr = true,1,100
 
 [monolith_loadout]:shared
 monolith_patch = false,1,0
-cigar3 = false,2,0
+wpn_knife7 = false,1,0
+device_pda_2 = false,1,0
+equ_small_pack = false,1,0
 
 helm_ranger = true,1,50 
+
 wpn_sks_b = true,1,1000,1
 wpn_mosin = true,1,1050
 wpn_vintorez_n1 = true,1,1000
@@ -309,7 +319,9 @@ wpn_ak12_custom = true,1,700,1
 
 [csky_loadout]:shared
 csky_patch = false,1,0
-cigarettes = false,2,0
+wpn_knife = false,1,0
+device_pda_1 = false,1,0
+itm_backpack = false,1,0
 
 helm_resp = true,1,50 
 
@@ -335,7 +347,9 @@ drink_crow = true,1,60
 
 [renegade_loadout]:shared
 renegade_patch = false,1,0
-cigarettes_russian = false,2,0
+wpn_knife = false,1,0
+device_pda_1 = false,1,0
+equ_small_pack = false,1,0
 
 helm_resp = true,1,50 
 
@@ -357,7 +371,9 @@ banditmerc_outfit = true,1,500
 [greh_loadout]:shared
 af_fire_loop = false,1,0
 greh_patch = false,1,0
-cigar3 = false,2,0
+wpn_knife7 = false,1,0
+device_pda_2 = false,1,0
+equ_small_pack = false,1,0
 
 helm_ranger = true,1,50 
 
@@ -378,7 +394,9 @@ greh_trenchcoat_outfit = true,1,50
 
 [isg_loadout]:shared
 isg_patch = false,1,0
-cigarettes = false,2,0
+wpn_knife = false,1,0
+device_pda_1 = false,1,0
+itm_backpack = false,1,0
 device_pda_3 = true,1,300 
 
 helm_respirator_gp5 = true,1,50
@@ -454,31 +472,31 @@ money = 3450
 money = 6520
 
 [dolg_money]
-money = 5000
+money = 3500
 
 [freedom_money]
-money = 5000
+money = 3500
 
 [killer_money]
-money = 5000
+money = 8750
 
 [army_money]
-money = 5000
+money = 7620
 
 [monolith_money]
-money = 5000
+money = 5200
 
 [csky_money]
-money = 5000
+money = 4500
 
 [renegade_money]
-money = 5000
+money = 2320
 
 [greh_money]
-money = 5000
+money = 4750
 
 [isg_money]
-money = 5000
+money = 15250
 
 [zombied_money]
-money = 5000
+money = 2450
