- New Game Starting Locations: Refine
Removes some spawns for bandits, army, mono and sin, adds some for ISG, Renegades, Bandits, Clear Sky and Ecologists.

--- a/gamedata/configs/plugins/new_game_start_locations.ltx
+++ b/gamedata/configs/plugins/new_game_start_locations.ltx
@@ -10,31 +10,29 @@
 
 [army_start_locations]
 research_institute     = l03_agroprom,true
-tc_central_tower       = k02_trucks_cemetery,true
 eastern_factory        = l04_darkvalley,true
-machine_yard           = k00_marsh,true
 southern_checkpoint    = l01_escape,true
-village_ruins          = k00_marsh,true
 
 [bandit_start_locations]
 northern_factory       = l04_darkvalley,true
-car_park               = l01_escape,true
 train_hangar           = l02_garbage,true
-abandoned_school       = l09_deadcity,true
 truck_cemetery_bandits_post = k02_trucks_cemetery,true
-tuzla_outpost          = k00_marsh,true
 pole_bandit_base       = l01_escape,true
 
 [csky_start_locations]
 hidden_base            = k00_marsh,true
 rookie_village         = l01_escape,true
+lodging_house          = l05_bar,true
 
 [dolg_start_locations]
 makeshift_barracks     = l05_bar,true
+sakharovs_bunker       = l08_yantar,true
+research_institute     = l03_agroprom,true
 
 [ecolog_start_locations]
 sakharovs_bunker       = l08_yantar,true
 research_institute     = l03_agroprom,true
+makeshift_barracks     = l05_bar,true
 
 [freedom_start_locations]
 military_base          = l07_military,true
@@ -55,23 +53,20 @@ lodging_house          = l05_bar,true
 cultural_center        = l11_pripyat,true
 brain_scorcher         = l10_radar,true
 power_station          = l12_stancia
-river_port             = pripyat,true
 kbo_monolith           = pripyat,true
-yanov_depo_monolith    = jupiter,true
-l13_generators         = l12_stancia,true
-bridge_red_forest_mon  = l10_red_forest,true
 
 [greh_start_locations]
 red_forest_old_mine    = l10_red_forest,true
 brain_scorcher         = l10_radar,true
 river_port             = pripyat,true
 l13_generators         = l12_stancia,true
-kbo_monolith           = pripyat,true
 
 [isg_start_locations]
 dasc_sawwill           = l01_escape,true
+sports_center          = l09_deadcity
 
 [renegade_start_locations]
+northern_factory       = l04_darkvalley,true
 tuzla_outpost          = k00_marsh,true
 pole_bandit_base       = l01_escape,true
 
