- Ecolog: Make it inherit from ecolog and not respective stalker loadout.
This probably has dire consequences.

I will pretend I don't see them.

--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_ecolog.ltx
@@ -1,37 +1,45 @@
 ; Done 8/28/24 - [Ted]
 [ecolog]:stalker
 
-[ecolog_novice]:stalker_novice
+[ecolog_novice]:ecolog
 primary = ecolog_novice_primary
 secondary = ecolog_novice_secondary
+extra = extras_novice
 
-[ecolog_trainee]:stalker_trainee
+[ecolog_trainee]:ecolog
 primary = ecolog_trainee_primary
 secondary = ecolog_trainee_secondary
+;extra = extras_trainee
 
-[ecolog_experienced]:stalker_experienced
+[ecolog_experienced]:ecolog
 primary = ecolog_experienced_primary
 secondary = ecolog_experienced_secondary
+extra  =  extras_experienced
 
-[ecolog_professional]:stalker_professional
+[ecolog_professional]:ecolog
 primary = ecolog_professional_primary
 secondary = ecolog_professional_secondary
+;extra = extras_professional
 
-[ecolog_veteran]:stalker_veteran
+[ecolog_veteran]:ecolog
 primary = ecolog_veteran_primary
 secondary = ecolog_veteran_secondary
+extra = extras_veteran
 
-[ecolog_expert]:stalker_expert
+[ecolog_expert]:ecolog
 primary = ecolog_expert_primary
 secondary = ecolog_expert_secondary
+;extra = extras_expert
 
-[ecolog_master]:stalker_master
+[ecolog_master]:ecolog
 primary = ecolog_master_primary
 secondary = ecolog_master_secondary
+extra = extras_master
 
-[ecolog_legend]:stalker_legend
+[ecolog_legend]:ecolog
 primary = ecolog_legend_primary
 secondary = ecolog_legend_secondary
+;extra = extras_legend
 
 ;----------------------------------------------------
 [ecolog_novice_primary]
