--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_freedom.ltx
@@ -1,15 +1,15 @@
 
 [freedom]:stalker
 
-[freedom_novice]:stalker_novice
+[freedom_novice]:stalker
 primary = freedom_novice_primary
-; secondary = freedom_experienced_secondary
+;secondary = freedom_novice_secondary
 
-[freedom_experienced]:stalker_experienced
+[freedom_experienced]:stalker
 primary = freedom_experienced_primary
 secondary = freedom_experienced_secondary
 
-[freedom_professional]:freedom_experienced
+[freedom_professional]:stalker
 
 [freedom_veteran]:stalker_veteran
 primary = freedom_veteran_primary
