- Duty NPC & New Game Loadouts
Likely gonna modify bits of this still, lots of balancing needed to be done.

This though marks the completion of 1 NATO Faction (Freedom), one Warsaw Faction (Duty) and one Mixed Faction (Ecologists) being complete so development should move a bit faster from now on.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -196,13 +196,13 @@ helm_resp = true,1,50
 helm_respirator_old = true,1,150
 
 wpn_sks_b = true,1,1000,1
-wpn_mosin = true,1,1050
+wpn_ppsh41 = true,1,750
 wpn_pp2000 = true,1,500
-wpn_kiparis = true,1,300
-wpn_toz34_obrez = true,1,550,2
+wpn_vz61 = true,1,300
+wpn_toz34_obrez = true,1,550
 wpn_toz106_m1 = true,1,375
-wpn_aps	= true,1,200
 wpn_colt1911 = true,1,200
+wpn_tt33_modern	= true,1,150
 wpn_pm_custom = true,1,125
 
 cooking = true,1,25
@@ -213,11 +213,13 @@ antirad_kalium = true,3,175
 medkit = true,3,150
 brewed_coffee = true,2,85
 ration_ukr = true,1,200
-vodka = true,2,150
+vodka = true,5,150
 cigarettes_russian = true,4,30
-drug_booster = true,1,250  
+drug_booster = true,1,250
 
-ammo_9x18_ap = true,3,85
+detector_geiger = true,1,200
+detector_radio = true,1,200
+detector_simple = true,1,450
 
 dolg_novice_outfit = true,1,50
 nbc_dolg_outfit = true,1,650
