- Mercenary Loadouts: Overhaul.
Another nato faction done. Next up, bandits.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -266,16 +266,20 @@ wpn_knife3 = false,1,0
 device_pda_2 = false,1,0
 itm_backpack = false,1,0
 
-helm_respirator_old = true,1,50
+helm_cloth_mask = true,1,5
+helm_rp_bala = true,1,10
+helm_resp = true,1,50
+helm_respirator_old = true,1,250
 
-wpn_k98 = true,1,1050
-wpn_mp5 = true,1,500
-wpn_vz61 = true,1,375
-wpn_bm16 = true,1,550,2
-wpn_toz106_m1 = true,1,375
-wpn_usp = true,1,250
+wpn_m4_ru556 = true,1,1000,1
+wpn_K98_mod = true,1,850,2
+wpn_mp5sd_custom = true,1,500
+wpn_mp5 = true,1,375
+wpn_toz34 = true,1,450
+wpn_toz106_m1 = true,1,300
 
 wpn_beretta_modern = true,1,200
+wpn_usp = true,1,250
 wpn_fn57 = true,1,325
 
 yadylin = true,2,50
@@ -293,8 +297,6 @@ drug_booster = true,1,250
 
 merc_fighter_outfit = true,1,50
 merc_wolven_outfit = true,1,600
-
-survival_kit = true,1,50
 
 [army_loadout]:shared
 army_patch = false,1,0
