--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_stalker.ltx
@@ -1,11 +1,11 @@
 ; Done 9/1/24 - [Ted]
 [stalker]
-extra  =  extras_basic
+extra = extras_basic
 
 [stalker_novice]:stalker
-primary  =  loner_novice_primary
-secondary  =  loner_novice_secondary
-extra  =  extras_novice
+primary = loner_novice_primary
+secondary = loner_novice_secondary
+extra = extras_novice
 
 [stalker_trainee]:stalker
 primary = loner_trainee_primary
@@ -13,27 +13,29 @@ secondary = loner_trainee_secondary
 extra = extras_trainee
 
 [stalker_experienced]:stalker
-primary  =  loner_experienced_primary
-secondary  =  loner_experienced_secondary
-extra  =  extras_experienced
+primary = loner_experienced_primary
+secondary = loner_experienced_secondary
+extra = extras_experienced
 
 [stalker_professional]:stalker
-primary  =  loner_professional_primary
-secondary  =  loner_professional_secondary
+primary = loner_professional_primary
+secondary = loner_professional_secondary
+extra = extras_professional
 
 [stalker_veteran]:stalker
-primary  =  loner_veteran_primary
-secondary  =  loner_veteran_secondary
-extra  =  extras_veteran
+primary = loner_veteran_primary
+secondary = loner_veteran_secondary
+extra = extras_veteran
 
 [stalker_expert]:stalker_veteran
-primary  =  loner_expert_primary
-secondary  =  loner_expert_secondary
+primary = loner_expert_primary
+secondary = loner_expert_secondary
+extra = extras_expert
 
 [stalker_master]:stalker
-primary  =  loner_master_primary
-secondary  =  loner_master_secondary
-extra  =  extras_master
+primary = loner_master_primary
+secondary = loner_master_secondary
+extra = extras_master
 
 [stalker_legend]:stalker
 primary = loner_legend_primary
