--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
@@ -1,25 +1,25 @@
 
-[zombied]:stalker_novice
+[zombied]:stalker
 
 [zombied_novice]:zombied
 primary = zombied_novice_primary
 
+[zombied_trainee]:zombied
+
 [zombied_experienced]:zombied
 primary = zombied_experienced_primary
+
+[zombied_professional]:zombied
 
 [zombied_veteran]:zombied
 primary = zombied_veteran_primary
 
+[zombied_expert]:zombied
+
 [zombied_master]:zombied
 primary = zombied_master_primary
 
-[zombied_trainee]:zombied_novice
-
-[zombied_professional]:zombied_experienced
-
-[zombied_expert]:zombied_veteran
-
-[zombied_legend]:zombied_master
+[zombied_legend]:zombied
 
 ;----------------------------------------------------
 [zombied_novice_primary]
