--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_killer.ltx
@@ -1,339 +1,341 @@
-
+; Done 9/1/24 - [Ted]
 [killer]:stalker
 
-[killer_novice]:stalker_novice
-primary = killer_primary
-secondary = killer_secondary
+[killer_novice]:killer
+primary = killer_novice_primary
+secondary = killer_novice_secondary
+extra  =  extras_novice
 
-[killer_experienced]:stalker_experienced
-primary = killer_primary
-secondary = killer_secondary
+[killer_trainee]:killer
+primary = killer_trainee_primary
+secondary = killer_trainee_secondary
+extra = extras_trainee
 
-[killer_veteran]:stalker_veteran
+[killer_experienced]:killer
+primary = killer_experienced_primary
+secondary = killer_experienced_secondary
+extra  =  extras_experienced
+
+[killer_professional]:killer
+primary = killer_professional_primary
+secondary = killer_professional_secondary
+extra = extras_professional
+
+[killer_veteran]:killer
 primary = killer_veteran_primary
 secondary = killer_veteran_secondary
+extra = extras_veteran
 
-[killer_master]:stalker_master
+[killer_expert]:killer
+primary = killer_expert_primary
+secondary = killer_expert_secondary
+extra = extras_expert
+
+[killer_master]:killer
 primary = killer_master_primary
 secondary = killer_master_secondary
+extra = extras_master
 
-[killer_trainee]:killer_novice
-
-[killer_professional]:killer_experienced
-
-[killer_expert]:killer_veteran
-
-[killer_legend]:killer_master
+[killer_legend]:killer
+primary = killer_legend_primary
+secondary = killer_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
-[killer_primary]
+
+[killer_novice_primary]
+
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_vz61:r:6
+wpn_ump45:r:3
+
+wpn_m4_ru556:r:0
+
+wpn_remington700:0:0
+
+wpn_mossberg590:0:3
+wpn_remington870:0:3
+wpn_toz106_m1:0:3
+wpn_ithacam37_trench:0:3
+
+[killer_novice_secondary]
+
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
+
+[killer_trainee_primary]
+
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_vz61:r:6
+wpn_ump45:r:3
+
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_aug:r:0
+
 wpn_remington700:0:0
 wpn_k98_mod:0:0
+
+wpn_mossberg590:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3
+
+[killer_trainee_secondary]
+
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
+
+[killer_experienced_primary]
+
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_mp5_nimble:4:6
+wpn_vz61:r:6
+wpn_ump45:r:3
+
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_aug:r:0
+wpn_aug:r:0
+
+wpn_remington700_archangel:0:0
+wpn_k98_mod:0:0
+
+wpn_mossberg590:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3
+
+[killer_experienced_secondary]
+
+wpn_sig226:r:0
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_glock:r:0
+wpn_glock_modern:r:0
+wpn_beretta_modern:r:0
+wpn_usp_match:r:0
+
+[killer_professional_primary]
+
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_mp5_nimble:4:6
+wpn_ump45:r:3
 
 wpn_p90gamma:r:3
 wpn_mp7:r:3:10
 
-wpn_m4a1_siber:4:6:5
-wpn_sig550:r:0:10
+wpn_m4_ru556:r:0
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_aug:r:0
+wpn_aug:r:0
+wpn_aug_modern:r:0
 
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
+wpn_remington700_archangel:0:0
+wpn_k98_mod:0:0
 
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0:50
-wpn_g36ka4_rwap:r:0:75
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
-
-wpn_pp2000:r:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-wpn_ump45:r:3
-
-wpn_pp2000:r:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-
+wpn_mossberg590:0:3
 wpn_remington870:0:3
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
+wpn_ithacam37_trench:0:3
 wpn_spas12:0:3:75
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3:75
-wpn_ithacam37_stakeout:0:3
-wpn_ithacam37_trench:0:3
-wpn_steyr_scout_big:0:0:50
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
 
-[killer_secondary]
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_mp412:0:0
+[killer_professional_secondary]
+
 wpn_sig226:r:0
-wpn_sig220_n:r:0
+wpn_sig226:r:0
 wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911:r:0
+wpn_glock:r:0
+wpn_glock_modern:r:0
 wpn_beretta_modern:r:0
 wpn_beretta_modern:r:0
-wpn_mp443:r:0
 wpn_usp_match:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
+wpn_usp_match:r:0
 wpn_fn57:r:0
 
 [killer_veteran_primary]
-wpn_fn2000_nimble:r:6:25
-wpn_vintorez_n1:r:3:5
-wpn_scar_siber:r:3:10
-wpn_k98_mod:0:0
-wpn_k98_mod:0:0
-wpn_l96a1m:0:0:10
-wpn_steyr_scout_big:r:0
-wpn_steyr_scout_big:0:0
-wpn_remington700:0:0
-wpn_remington700:0:0
-wpn_dvl10:4:0
-wpn_dvl10_m1:4:0
-wpn_fal_sa58_osw:r:0
-wpn_fal_sa58_osw:r:0
-wpn_ace52:r:3
-wpn_fal_sa58_osw:r:3:50
 
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_mp5_nimble:4:6
 wpn_ump45:r:3
 
-wpn_m4a1_siber:r:6
-wpn_m4_ru556:r:6:25
-wpn_m249:0:6
-wpn_sig550:r:6
-
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0:50
-wpn_g36ka4_rwap:r:0:50
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_m4_ru556:r:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
-
-wpn_pp2000:r:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_vz61:r:6
-wpn_vz61:r:6
-
 wpn_p90gamma:r:3
-wpn_mp7:r:3:50
+wpn_mp7:r:3:10
 
-
-wpn_m4a1_siber:r:6
-wpn_m4_ru556:r:6:25
-wpn_m249:0:6
-wpn_sig550:r:6
-
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:r:0:50
-wpn_g36ka4_rwap:r:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
 wpn_m4_ru556:r:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-wpn_sig552:0:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_aug:r:0
+wpn_aug_modern:r:0
+wpn_aug_modern:r:0
 
-wpn_pp2000:r:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5:0:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_mp5sd_custom:4:6
-wpn_vz61:r:6
-wpn_vz61:r:6
+wpn_remington700_archangel:0:0
+wpn_k98_mod:0:0
+wpn_l96a1:r:0
 
-wpn_p90gamma:r:3
-wpn_mp7:r:3:50
-
+wpn_mossberg590:0:3
 wpn_remington870:0:3
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
-wpn_spas12:0:3
-wpn_spas12:0:3
-wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
 wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_saiga12s_m2:0:3
 
 [killer_veteran_secondary]
-wpn_mp412:0:0
+
 wpn_sig226:r:0
-wpn_sig220_n:r:0
 wpn_glock:r:0
-wpn_glock_modern:r:0:25
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
 wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_mp412:r:0:30
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
+wpn_usp_match:r:0
+wpn_usp_match:r:0
+wpn_fn57:r:0
+wpn_fn57:r:0
+
+[killer_expert_primary]
+
+wpn_mp5:0:6
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5sd_custom:4:6
+wpn_mp5_nimble:4:6
+wpn_ump45:r:3
+
+wpn_p90gamma:r:3
+wpn_mp7:r:3:10
+wpn_mp7:r:3:10
+
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_aug_modern:r:0
+wpn_aug_modern:r:0
+wpn_g36ka4_rwap:r:0:50
+wpn_g36ka4_rwap:r:0:50
+wpn_scar_siber:r:3:25
+
+wpn_remington700_archangel:0:0
+wpn_k98_mod:0:0
+wpn_l96a1:r:0
+
+wpn_mossberg590:0:3
+wpn_remington870:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_saiga12s_m2:0:3
+
+[killer_expert_secondary]
+
+wpn_sig226:r:0
+wpn_glock:r:0
+wpn_glock_modern:r:0
+wpn_glock_modern:r:0
 wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_mp443:r:0
+wpn_usp_match:r:0
 wpn_usp_match:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-wpn_fn57:r:0
-
 
 [killer_master_primary]
-wpn_fn2000_nimble:r:6
-wpn_remington700_lapua700:r:0
-wpn_remington700_lapua700:r:0
-wpn_ace52:r:3
-wpn_ace52:r:3
-wpn_saiga12s_isg:r:6:20
-wpn_saiga12s_isg:r:6:40
-wpn_l96a1m:0:0
-wpn_l96a1m:0:0
-wpn_steyr_scout_big:r:3
-wpn_steyr_scout_big:r:3
-wpn_dvl10_m1:4:0
-wpn_fal_sa58_osw:r:3
 
+wpn_mp5:0:6
+wpn_mp5sd_custom:4:6
+wpn_mp5_nimble:4:6
+wpn_mp5_nimble:4:6
 wpn_ump45:r:3
-wpn_ump45:r:3
-
-wpn_remington700:0:3
-wpn_remington700:0:3
-wpn_dvl10:4:3
-wpn_fal_sa58_osw:r:3
-wpn_scar_siber:r:3:25
-wpn_scar_siber:r:3:25
-wpn_scar_siber:r:3:25
-wpn_vintorez_n1:4:3:15
-
-wpn_m4_ru556:r:6:25
-wpn_m249:4:6
-wpn_m4_ru556:4:6
-wpn_ak74_n:4:6
-wpn_sig550:r:6
-wpn_sig550:r:6
+wpn_kriss_vector:r:3
 
 wpn_p90gamma:r:3
-wpn_p90gamma:r:3
-wpn_mp7:r:3
-wpn_mp7:r:3
-wpn_p90gamma:r:3:75
+wpn_mp7:r:3:10
+wpn_mp7:r:3:10
 
-wpn_aug_modern:0:6
-wpn_aug_merc:0:6
-wpn_g36ka4_rwap:r:6
-wpn_g36ka4_rwap:r:6
-wpn_g36ka4_rwap:r:6
-wpn_l85_m2:4:6
-wpn_m4a1_siber:0:6
-wpn_m4a1_siber:0:6
-wpn_m4_ru556:r:6
-wpn_m4_ru556:r:6
-wpn_sig550:0:6
-wpn_sig552:0:6
+wpn_m4_ru556:r:0
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_aug_modern:r:0
+wpn_aug_modern:r:0
+wpn_g36ka4_rwap:r:0:50
+wpn_g36nimble_rwap:r:0:50
+wpn_scar_siber:r:3:25
+
+wpn_remington700_archangel:0:0
+wpn_remington700_lapua700:0:0
+wpn_l96a1:r:0
+
+wpn_m249:r:6
+
+wpn_remington870:0:3
+wpn_spas12:0:3:75
+wpn_saiga12s_m2:0:3
+wpn_saiga12s_m2:0:3
 
 [killer_master_secondary]
-wpn_mp412:0:0
+
 wpn_sig226:r:0
-wpn_sig220_n:r:0
-wpn_glock:r:0
-wpn_glock_modern:r:0:25
-wpn_beretta_modern:r:0
-wpn_walther_p99:r:0
-wpn_walther_p99:r:0
-wpn_mp412:r:0
-wpn_colt1911:r:0
-wpn_colt1911_camo:r:0
-wpn_colt1911_custom:r:0
-wpn_colt1911:r:0
-wpn_beretta_modern:r:0
-wpn_beretta_modern:r:0
-wpn_korth:r:0
-wpn_korth_custom:r:0
-wpn_mp443:r:0
+wpn_glock_modern:r:0
 wpn_usp_match:r:0
-wpn_fnp45:r:0
-wpn_usp:r:0
-wpn_usp:r:0
-wpn_usp:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
-wpn_fn57:r:0
+
+[killer_legend_primary]
+
+wpn_mp5_nimble:4:6
+wpn_mp5_nimble:4:6
+wpn_mp5_nimble:4:6
+wpn_kriss_vector:r:3
+
+wpn_p90gamma:r:3
+wpn_p90gamma:r:3
+wpn_mp7:r:3:10
+
+wpn_m4a1_siber:r:0
+wpn_m4a1_siber:r:0
+wpn_fn2000_nimble:r:6:25
+wpn_aug_modern:r:0
+wpn_aug_modern:r:0
+wpn_g36nimble_rwap:r:0:50
+wpn_g36nimble_rwap:r:0:50
+wpn_scar_siber:r:3:25
+
+wpn_remington700_archangel:0:0
+wpn_remington700_lapua700:0:0
+wpn_l96a1:r:0
+
+wpn_m249:r:6
+wpn_m249:r:6
+
+wpn_remington870:0:3
+wpn_spas12:0:3:75
+wpn_saiga12s_isg:r:6:40
+
+[killer_legend_secondary]
+
+wpn_sig226:r:0
+wpn_glock_modern:r:0
+wpn_usp_match:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
 wpn_fn57:r:0
