- Bandit Loadouts: Overhaul.
Another WP faction down. Likely the weakest but whatever.

Next: Clear Sky.

--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_bandit.ltx
@@ -1,245 +1,378 @@
 
-[bandit_novice]:stalker_novice
+[bandit]:stalker
+
+[bandit_novice]:bandit
 primary = bandit_novice_primary
-; secondary = bandit_experienced_secondary
+secondary = bandit_novice_secondary
+extra = extras_novice
 
-[bandit_trainee]:bandit_novice
+[bandit_trainee]:bandit
+primary = bandit_trainee_primary
+secondary = bandit_trainee_secondary
+extra = extras_trainee
 
-[bandit_experienced]:stalker_experienced
+[bandit_experienced]:bandit
 primary = bandit_experienced_primary
 secondary = bandit_experienced_secondary
+extra = extras_experienced
 
-[bandit_professional]:bandit_experienced
+[bandit_professional]:bandit
+primary = bandit_professional_primary
+secondary = bandit_professional_secondary
+extra = extras_professional
 
-[bandit_veteran]:stalker_veteran
+[bandit_veteran]:bandit
 primary = bandit_veteran_primary
 secondary = bandit_veteran_secondary
+extra = extras_veteran
 
-[bandit_expert]:bandit_veteran
+[bandit_expert]:bandit
+primary = bandit_expert_primary
+secondary = bandit_expert_secondary
+extra = extras_expert
 
-[bandit_master]:stalker_master
+[bandit_master]:bandit
 primary = bandit_master_primary
 secondary = bandit_master_secondary
+extra = extras_master
 
-[bandit_legend]:bandit_master
+[bandit_legend]:bandit
+primary = bandit_legend_primary
+secondary = bandit_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
+
 [bandit_novice_primary]
-wpn_sks_b:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
+
+wpn_kiparis:0:0
 wpn_kiparis:0:0
 wpn_vz61:0:0
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_kiparis:0:0
 wpn_vz61:0:0
 wpn_ppsh41:0:3
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
 
-wpn_pm_custom:0
+wpn_sks_b:0:0
+
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta:0:0
+wpn_protecta:0:0
+
+[bandit_novice_secondary]
+
 wpn_pm_custom:0:0
 wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
 wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
+
+[bandit_trainee_primary]
+
+wpn_kiparis:0:0
 wpn_kiparis:0:0
 wpn_vz61:0:0
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0   
 
 wpn_bm16_full:0:3
+wpn_bm16:0:3
 wpn_toz34:0:3
-wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
 wpn_toz106_m1:0:0
-wpn_toz106_m1:0:0
-wpn_mp133:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_wincheaster1300:0:3
-wpn_ithacam37_stakeout:0:3
+wpn_protecta:0:0
 
+[bandit_trainee_secondary]
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
 
 [bandit_experienced_primary]
-wpn_sks_b:0:0
-wpn_bm16:0:3
-wpn_bm16:0:3
-wpn_toz34_obrez:0:3
-wpn_toz34_obrez:0:3
 
 wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vz61:0:0
 wpn_vz61:0:0
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
 wpn_bizon:0:0
-wpn_bizon:0:0
 
-wpn_aps:0:6
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_adar2_15:0:0
+wpn_mosin:r:0
+
 wpn_bm16_full:0:3
+wpn_bm16:0:3
 wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
+wpn_toz34_obrez:0:3
 wpn_wincheaster1300:0:3
 wpn_wincheaster1300:0:3
-wpn_ithacam37_stakeout:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
 
 [bandit_experienced_secondary]
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
 wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
+wpn_pb_custom:0:0
 wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_aps:0:0
 wpn_mp412:0:0
 
+[bandit_professional_primary]
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta_aim:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
+
+[bandit_professional_secondary]
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+
 [bandit_veteran_primary]
-wpn_sks_b:0:0
-wpn_sks_b:0:0
-wpn_mosin:0:6
-wpn_k98:0:3
 
 wpn_kiparis:0:0
 wpn_vz61:0:0
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+wpn_ak74_n:r:0
+wpn_akm_bas:r:0
+
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta_aim:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+
+[bandit_veteran_secondary]
+
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+
+[bandit_expert_primary]
+
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
 wpn_ppsh41:0:3
 wpn_bizon:0:0
 
-wpn_bm16_full:0:3
-wpn_toz34_mark4_23:0:0
-wpn_toz34:0:3
-wpn_toz34:0:3
-wpn_mp133:0:3
-wpn_mp153_m1:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_wincheaster1300:0:3
-wpn_wincheaster1300:0:3
-wpn_ithacam37_stakeout:0:3
-
-wpn_svd_m1:0
-wpn_winchester1873:0:0
+wpn_mosin:r:0
+wpn_sv98:r:0
+wpn_svd_m1:r:0
 wpn_winchester1873:0:0
 
+wpn_sks_b:0:0
+wpn_sks_b:0:0
 wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+wpn_ak74_n:r:0
+wpn_ak74m_n:r:0
+wpn_akm_bas:r:0
 
-[bandit_veteran_secondary]
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_toz34_mark4_23:0:0
+
+[bandit_expert_secondary]
+
+wpn_pm_custom:0:0
 wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
 wpn_tt33_modern:0:0
 wpn_colt1911:0:0
-wpn_fn57:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
 wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
 
 [bandit_master_primary]
-wpn_remington700_magpul_pro:r:0:20
-wpn_toz34_mark4_23:0:0
-wpn_rpk:0:0
-wpn_rpk:0:r
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_val:0:0
 
-wpn_svd_m1:6
-wpn_svd_m1:6
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
 
-wpn_ak74m_n:0:6
-wpn_ak105:0:6
-wpn_ak74_n:0:0
-wpn_ak74_n:0:r
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:r
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:r
-
-wpn_vintorez_n1:r:3
-wpn_vintorez_n1:r:3
-wpn_k98:0:3
-wpn_sks_tac:r:3
-wpn_sks_molot:r:r
-wpn_sv98:0:3
-wpn_ks23:0:1
-wpn_mp153_m1:0:3
-wpn_spas12:0:3:75
-wpn_mosin:0:6
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-wpn_ithacam37_trench:0:3
-
-wpn_pp2000:r:0
-wpn_vityaz:0:6
-wpn_vityaz:0:r
-wpn_vityaz:0:6
+wpn_sv98:r:0
+wpn_svd_m1:r:0
 wpn_winchester1873:0:0
 
+wpn_sks_tac:r:3
+wpn_sks_molot:r:0
 wpn_adar2_15:0:0
-wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74_n:r:0
+wpn_ak74m_n:r:0
+wpn_ak74m_n:0:6
+wpn_akm_bas:r:0
+wpn_ak105:0:6
+wpn_vintorez_n1:r:3
+wpn_groza:r:0
+wpn_groza:r:0
 
-wpn_pkm_siber:r:0:25
+wpn_rpk:0:r
+
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_toz34_mark4_23:0:0
 
 [bandit_master_secondary]
-wpn_mp443:0:0
+
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
 wpn_aps:0:0
 wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
 wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+
+[bandit_legend_primary]
+
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sv98:r:0
+wpn_svds:r:0
+
+wpn_ak74u_tac:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74m_n:r:0
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak104_alfa:r:0
+wpn_vintorez_n1:r:3
+wpn_groza:r:0
+wpn_groza:r:0
+wpn_groza:r:0
+
+wpn_rpk74_16:r:0
+
+wpn_ks23:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_toz34_mark4_23:0:0
+
+[bandit_legend_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
